--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "atoloWallet",
     "version": "0.0.1",
     "manifest_version": 2,
-    "description": "atolo",
+    "description": "이더리움 브라우저 지갑",
     "browser_action": {
         "default_title": "chrome_test",
         "default_icon": "logo.png",
@@ -11,6 +11,18 @@
     "permissions": [
         "https://*/*",
         "http://*/*",
-        "tabs"
+        "tabs",
+        "activeTab"
+    ],
+    "background": {
+        "page": "background.html",
+        "icon": "logo.png"
+    },
+    "content_scripts": [
+    {
+        "matches": ["https://conservative-vector.tistory.com/entry/extension%EA%B3%BC-page-%ED%86%B5%EC%8B%A0%ED%95%98%EA%B8%B0?category=828885"],
+        "css": ["style.css"],
+        "js": ["contentScript.js"]
+    }
     ]
 }
